# DX9Test

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Common/: D3DApplication.cpp  D3DApplication.h  D3DPrerequisites.h  D3DWindow.cpp  D3DWindow.h  Main.cpp  Utility.cpp  Utility.h  WinMain.cpp
D3DColorTriangleApp/: CMakeLists.txt
D3DCubeApp/: CMakeLists.txt
D3DInitApp/: CMakeLists.txt  D3DInitApp.cpp
D3DTeapotApp/: CMakeLists.txt
D3DXCreateApp/: CMakeLists.txt
Projects/: generate-vs2015-x64.bat  generate-vs2015-x86.bat  generate-vs2017-x64.bat
